@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-30T08:31:50Z",
-  "count" : 122,
-  "count_minmax" : [ 23, 122 ],
-  "count_decinc" : [ -0, +122 ],
+  "timestamp" : "2022-05-30T16:34:42Z",
+  "count" : 248,
+  "count_minmax" : [ 23, 248 ],
+  "count_decinc" : [ -0, +248 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
