@@ -1,11 +1,11 @@
 {
-  "count": 4948,
-  "uniques": 25,
+  "count": 4936,
+  "uniques": 23,
   "clones": [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 196,
-      "uniques": 7
+      "count": 58,
+      "uniques": 2
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 122,
+      "count": 248,
       "uniques": 3
     }
   ]
