@@ -1,3 +1,10 @@
+2022-05-30T16:34:42Z:
+* notice: last 14d: unq all: 23 4936
+* notice: prev accum: outdated-unq outdated-all / unq all: 546 22964 / 603 27912
+* notice: next accum: outdated-unq outdated-all / unq all: 546 22964 / 598 27900
+* notice: prev exec diff / last date diff / accum: unq all: +0 +126 -5 -138 / +3 +248 -0 -0 / 3 248
+* notice: changed dates: [2022-05-16 2022-05-30]
+
 2022-05-30T08:31:50Z:
 * notice: last 14d: unq all: 25 4948
 * notice: prev accum: outdated-unq outdated-all / unq all: 546 22964 / 602 27916
